--- a/index.html
+++ b/index.html
@@ -41,5 +41,11 @@
 <ul>
     <li><h3>Step 6 - tap Open</h3></li>
 </ul>
+    <video width="320" height="240" controls="controls">
+<source src="/dokuwiki/lib/exe/fetch.php?media=playground:programs:vlc-record-2020-03-22-21h32m04s-vlc-install_instructions3.mp4-.mp4" type="video/mp4" />
+<a href="/dokuwiki/lib/exe/fetch.php?cache=&amp;media=playground:programs:vlc-record-2020-03-22-21h32m04s-vlc-install_instructions3.mp4-.mp4" class="media mediafile mf_mp4" title="playground:programs:vlc-record-2020-03-22-21h32m04s-vlc-install_instructions3.mp4-.mp4 (5 MB)">vlc-record-2020-03-22-21h32m04s-vlc-install_instructions3.mp4-.mp4</a></video>
+
+
+    
 </body>
 </html>
