Change folder of video source to Video\Capture

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 
 </head>
 <body>
+<p>
+<video width="640" height="480" controls="controls">
+	<source src="\\C:\Users\Home-laptop\Videos\Captures\vlcInstrutions.mp4" type="video/mp4" />
+</video>
+</p>
+
 <ul>
     <li><h3>Step 1 - tap app-debug.apk</h3></li>
     <li><h3>Step 2 - scrolldown, tap download icon</h3></li>
@@ -41,13 +47,11 @@
 <ul>
     <li><h3>Step 6 - tap Open</h3></li>
 </ul>
-    
-<video width="320" height="240" controls="controls">
-	<source src="..VideoFiles/vlc-record-2020-03-22-21h32m04s-vlc-install_instructions3.mp4-.mp4" type="video/mp4" />
-	<source src="..VideoFiles/vlc-record-2020-03-22-21h32m04s-vlc-install_instructions3.mp4-.ogg" type="video/ogg" />
-</video>
+
+
 
 
     
 </body>
 </html>
+<!-- file:///C:/Users/Home-laptop/Documents/Github%20Pages/TitanArchersScoring%20Page/DownloadScoringApp/index.html -->
