Thing I got video file in right folder now

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <p>
 <video width="640" height="480" controls="controls">
-	<source src="\\C:\Users\Home-laptop\Videos\Captures\vlcInstrutions.mp4" type="video/mp4" />
+	<source src="\\C:\Users\Home-laptop\Documents\GitPages\TitanArchersScoring\DownloadScoringApp\vlcInstrutions.mp4" type="video/mp4" />
 </video>
 </p>
 
@@ -54,4 +54,4 @@
     
 </body>
 </html>
-<!-- file:///C:/Users/Home-laptop/Documents/Github%20Pages/TitanArchersScoring%20Page/DownloadScoringApp/index.html -->
+<!-- file:///C:/Users/Home-laptop/Documents/GitPages/TitanArchersScoring/DownloadScoringApp/index.html -->
