Add video via github.io url

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <p>
 <video width="640" height="480" controls="controls">
-	<source src="\\C:\Users\Home-laptop\Documents\GitPages\TitanArchersScoring\DownloadScoringApp\vlcInstrutions.mp4" type="video/mp4" />
+	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
 </video>
 </p>
 
