--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titan Archers Scoring APP</title>
-    <style> body {padding: 0; margin: 0;} </style>
-    <h1>
-        <b>
-            Instructions for downloading and installing<br>
-            TitanArchersScoring App - on android devices
-        </b>
-    </h1>
-
-
+    <style> 
+		body {padding: 10; margin: 10;} 
+		video {display: block; left: 500; }
+	</style>
 
 </head>
 <body>
+
+<h1>
+	<b>
+		Instructions for downloading and installing<br>
+		TitanArchersScoring App - on android devices
+	</b>
+</h1>
+
 <p>
 <video width="640" height="480" controls="controls">
 	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
@@ -31,16 +34,31 @@
 </ul>
 
     <h3><b><span style="color:red">If App not Installed! message<br>
-        you must allow chrome or (browser) permission to download unknown app
+        you must allow chrome or (browser) permission to download unknown app<br>
+		on Android 9
     </span></b></h3>
 
 <ul>
     <li><h3>a - go to phone settings</h3></li>
     <li><h3>b - find Apps & Notifications</h3></li>
+    <li><h3>c - find web Browser to use</h3></li>
+    <li><h3>d - Advanced</h3></li>
+    <li><h3>e - Install unknown apps</h3></li>
+    <li><h3>f - Verify browser will allow from this source</h3></li>
+</ul>
+    <h3><b><span style="color:red">on Android 10
+    </span></b></h3>
+
+<ul>
+    <li><h3>a - go to phone settings</h3></li>
+    <li><h3>b - find Apps</h3></li>
     <li><h3>c - Advanced</h3></li>
     <li><h3>d - Special app access</h3></li>
     <li><h3>e - Install unknown apps</h3></li>
     <li><h3>f - Verify browser will allow from this source</h3></li>
+	<li><h3>Might also get two messages from Play Protect upon installation</h3></li>
+	<li><h3>1 - Must answer Install Anyways</h3></li>
+	<li><h3>1 - Must answer Don't send</h3></li>
 </ul>
 <h3><b><span style="color:red">Else App installed message
 </span></b></h3>
