Breaking up html into links

--- a/Instructions1.html
+++ b/Instructions1.html
@@ -26,11 +26,11 @@
 </ul>
 <h3><b><span style="color:red">Android 9.0 - If App not Installed! message<br>
 	you must allow chrome or (browser) permission to download unknown app<br>
-	See: <a href="https://jamesb6313.github.io/DownloadScoringApp/Instrutions2.html" type="html" </a>
+	See: <a href="https://jamesb6313.github.io/DownloadScoringApp/Instructions2.html">Add permission - Android 9.0</a>
 </span></b></h3>
 
 <h3><b><span style="color:red">on Android 10<br>
-	See: <a href="https://jamesb6313.github.io/DownloadScoringApp/Instrutions3.html" type="html" </a>
+	See: <a href="https://jamesb6313.github.io/DownloadScoringApp/Instructions3.html">Add permission - Android 10.0 </a>
 </span></b></h3>
 
 <h3><b><span style="color:red">Else App installed message
