--- a/Instructions3.html
+++ b/Instructions3.html
@@ -26,10 +26,15 @@
     <li><h3>d - Special app access</h3></li>
     <li><h3>e - Install unknown apps</h3></li>
     <li><h3>f - Verify browser will allow from this source</h3></li>
-	<li><h3>Might also get two messages from Play Protect upon installation</h3></li>
-	<li><h3>1 - Must answer Install Anyways</h3></li>
-	<li><h3>1 - Must answer Don't send</h3></li>
 </ul>
+
+<h3><b><span style="color:red">Might also get two messages from Play Protect upon installation
+</span></b></h3>
+<ul>
+	<li><h3>1 - Must answer Install Anyways</h3></li>
+	<li><h3>2 - Must answer Don't send</h3></li>
+</ul>
+
 </body>
 </html>
 <!-- file:///C:/Users/Home-laptop/Documents/GitPages/TitanArchersScoring/DownloadScoringApp/Instructions3.html -->
