Mods to files for structure and language

--- a/Instructions3.html
+++ b/Instructions3.html
@@ -20,19 +20,19 @@
 <h3><b><span style="color:red">on Android 10
 </span></b></h3>
 <ul>
-    <li><h3>a - go to phone settings</h3></li>
-    <li><h3>b - find Apps</h3></li>
-    <li><h3>c - Advanced</h3></li>
-    <li><h3>d - Special app access</h3></li>
-    <li><h3>e - Install unknown apps</h3></li>
-    <li><h3>f - Verify browser will allow from this source</h3></li>
+    <li><h3>a - Go to phone'''s settings</h3></li>
+    <li><h3>b - Select Apps</h3></li>
+    <li><h3>c - Select Advanced</h3></li>
+    <li><h3>d - Select Special app access</h3></li>
+    <li><h3>e - Select Install unknown apps</h3></li>
+    <li><h3>f - Verify browser will allow from this source is set to on</h3></li>
 </ul>
 
-<h3><b><span style="color:red">Might also get two messages from Play Protect upon installation
+<h3><b><span style="color:red">You might also get two messages from Play Protect upon installation
 </span></b></h3>
 <ul>
-	<li><h3>1 - Must answer Install Anyways</h3></li>
-	<li><h3>2 - Must answer Don't send</h3></li>
+	<li><h3>1 - you must answer "Install Anyways" to allow installation to continue</h3></li>
+	<li><h3>2 - you must answer "Don't send" to complete installation</h3></li>
 </ul>
 
 </body>
