Mods to files for structure and language

--- a/Instructions2.html
+++ b/Instructions2.html
@@ -21,12 +21,12 @@
 	on Android 9
 </span></b></h3>
 <ul>
-    <li><h3>a - go to phone settings</h3></li>
-    <li><h3>b - find Apps & Notifications</h3></li>
-    <li><h3>c - find web Browser to use</h3></li>
-    <li><h3>d - Advanced</h3></li>
-    <li><h3>e - Install unknown apps</h3></li>
-    <li><h3>f - Verify browser will allow from this source</h3></li>
+    <li><h3>a - Go to phone's Settings</h3></li>
+    <li><h3>b - Select Apps & Notifications</h3></li>
+    <li><h3>c - Select web browser that your using for the download</h3></li>
+    <li><h3>d - Select Advanced</h3></li>
+    <li><h3>e - Select Install unknown apps</h3></li>
+    <li><h3>f - Verify browser "Will allow from this source" is set to on</h3></li>
 </body>
 </html>
 <!-- file:///C:/Users/Home-laptop/Documents/GitPages/TitanArchersScoring/DownloadScoringApp/Instructions2.html -->
