--- a/Instructions3.html
+++ b/Instructions3.html
@@ -20,12 +20,12 @@
 <h3><b><span style="color:red">on Android 10
 </span></b></h3>
 <ul>
-    <li><h3>a - Go to phone'''s settings</h3></li>
+    <li><h3>a - Go to phone's Settings</h3></li>
     <li><h3>b - Select Apps</h3></li>
     <li><h3>c - Select Advanced</h3></li>
     <li><h3>d - Select Special app access</h3></li>
     <li><h3>e - Select Install unknown apps</h3></li>
-    <li><h3>f - Verify browser will allow from this source is set to on</h3></li>
+    <li><h3>f - f - Verify browser "Will allow from this source" is set to on</h3></li>
 </ul>
 
 <h3><b><span style="color:red">You might also get two messages from Play Protect upon installation
