--- a/index.html
+++ b/index.html
@@ -19,57 +19,19 @@
 	</b>
 </h1>
 
-<p>
-<video width="640" height="480" controls="controls">
-	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
-</video>
-</p>
+<h3><b><span style="color:red">
+	Instruction video<br>
+	<p>
+		<video width="640" height="480" controls="controls">
+			<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
+		</video>
+	</p>
 
-<ul>
-    <li><h3>Step 1 - tap app-debug.apk</h3></li>
-    <li><h3>Step 2 - scrolldown, tap download icon</h3></li>
-    <li><h3>Step 3 - tap download</h3></li>
-    <li><h3>Step 4 - tap Open</h3></li>
-    <li><h3>Step 5 - tap Install</h3></li>
-</ul>
-
-    <h3><b><span style="color:red">If App not Installed! message<br>
-        you must allow chrome or (browser) permission to download unknown app<br>
-		on Android 9
-    </span></b></h3>
-
-<ul>
-    <li><h3>a - go to phone settings</h3></li>
-    <li><h3>b - find Apps & Notifications</h3></li>
-    <li><h3>c - find web Browser to use</h3></li>
-    <li><h3>d - Advanced</h3></li>
-    <li><h3>e - Install unknown apps</h3></li>
-    <li><h3>f - Verify browser will allow from this source</h3></li>
-</ul>
-    <h3><b><span style="color:red">on Android 10
-    </span></b></h3>
-
-<ul>
-    <li><h3>a - go to phone settings</h3></li>
-    <li><h3>b - find Apps</h3></li>
-    <li><h3>c - Advanced</h3></li>
-    <li><h3>d - Special app access</h3></li>
-    <li><h3>e - Install unknown apps</h3></li>
-    <li><h3>f - Verify browser will allow from this source</h3></li>
-	<li><h3>Might also get two messages from Play Protect upon installation</h3></li>
-	<li><h3>1 - Must answer Install Anyways</h3></li>
-	<li><h3>1 - Must answer Don't send</h3></li>
-</ul>
-<h3><b><span style="color:red">Else App installed message
+	<p>
+	Instruction Text<br>
+		<a href="https://jamesb6313.github.io/DownloadScoringApp/Instructions1.html">Add permission - Android 9.0</a>
+	</p>
 </span></b></h3>
-<ul>
-    <li><h3>Step 6 - tap Open</h3></li>
-</ul>
-
-
-
-
-    
 </body>
 </html>
 <!-- file:///C:/Users/Home-laptop/Documents/GitPages/TitanArchersScoring/DownloadScoringApp/index.html -->
