Mods to files for structure and language

--- a/Instructions2.html
+++ b/Instructions2.html
@@ -10,12 +10,12 @@
 
 </head>
 <body>
-<h1>
+<h2>
 	<b>
-		Download and Installation Instructions for<br>
+		Instructions for downloading and installing<br>
 		TitanArchersScoring App - on android devices
 	</b>
-</h1>
+</h2>
 
 <h3><b><span style="color:red">
 	on Android 9
