--- a/index.html
+++ b/index.html
@@ -5,33 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titan Archers Scoring APP</title>
     <style> 
-		body {padding: 10; margin: 10;} 
-		video {display: block; left: 500; }
+		body {padding: 50; margin: 50;} 
+		video {display: block; }
 	</style>
 
 </head>
 <body>
 
-<h1>
+<h2>
 	<b>
 		Instructions for downloading and installing<br>
 		TitanArchersScoring App - on android devices
 	</b>
-</h1>
+</h2>
 
-<h3><b><span style="color:red">
-	Instruction video<br>
-	<p>
-		<video width="640" height="480" controls="controls">
-			<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
-		</video>
-	</p>
+<span style="color:red">
+	<h3><b>Instruction Video</b></h3>
+</span>
 
-	<p>
-	Instruction Text<br>
-		<a href="https://jamesb6313.github.io/DownloadScoringApp/Instructions1.html">Add permission - Android 9.0</a>
-	</p>
-</span></b></h3>
+<video width="640" height="480" controls="controls">
+	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
+</video>
+
+<span style="color:red">
+	<h3><b>Links</b></h3>
+</span>
+
+<a href="https://jamesb6313.github.io/DownloadScoringApp/Instructions1.html">Instruction Text</a><br>
+<a href="https:/github.com/jamesb6313"> My Github page where you can find the sorce code for this App</a><br>
+
+<!--<a href="https:/jamesb6313.github.io/DownloadScoringApp"> This site </a>-->
+
 </body>
 </html>
 <!-- file:///C:/Users/Home-laptop/Documents/GitPages/TitanArchersScoring/DownloadScoringApp/index.html -->
