--- a/Instructions1.html
+++ b/Instructions1.html
@@ -10,19 +10,23 @@
 
 </head>
 <body>
-<h1>
+<h2>
 	<b>
-		Download and Installation Instructions for<br>
+		Instructions for downloading and installing<br>
 		TitanArchersScoring App - on android devices
 	</b>
-</h1>
+</h2>
 
 <ul>
-    <li><h3>Step 1 - tap app-debug.apk</h3></li>
-    <li><h3>Step 2 - scrolldown, tap download icon</h3></li>
-    <li><h3>Step 3 - tap download</h3></li>
-    <li><h3>Step 4 - tap Open</h3></li>
-    <li><h3>Step 5 - tap Install</h3></li>
+    <li><h3>Step 1 - Go to my Github Repositories found here:<br>
+	<a href="https:/github.com/jamesb6313">https:/github.com/jamesb6313</a>
+	</h3></li>
+    <li><h3>Step 2 - Go to TianArchersScoring Repository</h3></li>
+    <li><h3>Step 3 - Tap on app-debug.apk</h3></li>
+    <li><h3>Step 2 - Scrolldown</h3></li>
+    <li><h3>Step 3 - Tap on download icon</h3></li>
+    <li><h3>Step 4 - Tap on Open</h3></li>
+    <li><h3>Step 5 - Tap on Install</h3></li>
 </ul>
 <h3><b><span style="color:red">Android 9.0 - If App not Installed! message<br>
 	you must allow chrome or (browser) permission to download unknown app<br>
