--- a/Instructions1.html
+++ b/Instructions1.html
@@ -19,7 +19,7 @@
 
 <ul>
     <li><h3>Step 1 - Go to my Github Repositories found here:<br>
-	<a href="https:/github.com/jamesb6313">https:/github.com/jamesb6313</a>
+	<a href="https://github.com/jamesb6313">https://github.com/jamesb6313</a>
 	</h3></li>
     <li><h3>Step 2 - Go to TianArchersScoring Repository</h3></li>
     <li><h3>Step 3 - Tap on app-debug.apk</h3></li>
