fix main numbering and add View Code step

--- a/Instructions1.html
+++ b/Instructions1.html
@@ -27,10 +27,20 @@
     <li><h3>Step 5 - Scrolldown</h3></li>
     <li><h3>Step 6 - Tap on download icon</h3></li>
     <li><h3>Step 7 - Tap on Open</h3></li>
+</u1>
+
+<h2><b><span style="color:red">If using Chrome you might get the following alert<br>
+"For your security, your phone is not allowed to install unknown apps from this source"<br>
+Then you must go to settings and change to allow installation	
+</span></b></h2>
+
+<ul>
     <li><h3>Step 8 - Tap on Install</h3></li>
 </ul>
+
 <h3><b><span style="color:red">Android 9.0 - If App not Installed! message<br>
 	you must allow chrome or (browser) permission to download unknown app<br>
+	This can be done prior to download and installation.
 	See: <a href="https://jamesb6313.github.io/DownloadScoringApp/Instructions2.html">Add permission - Android 9.0</a>
 </span></b></h3>
 
