--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titan Archers Scoring APP</title>
+    <title>Download and Installation Instructions for Titan Archers Scoring APP</title>
     <style> 
 		body {padding: 50; margin: 50;} 
 		video {display: block; }
