--- a/Instructions1.html
+++ b/Instructions1.html
@@ -24,17 +24,18 @@
     <li><h3>Step 2 - Go to TianArchersScoring Repository</h3></li>
 	<li><h3>Step 3 - Tap on View Code</h3></li>
     <li><h3>Step 4 - Tap on app-debug.apk</h3></li>
-    <li><h3>Step 5 - Scrolldown</h3></li>
-    <li><h3>Step 6 - Tap on download icon</h3></li>
-    <li><h3>Step 7 - Tap on Open</h3></li>
+    <li><h3>Step 5 - Scrolldown and tap on download icon</h3></li>
+    <li><h3>Step 6 - Tap on Open</h3></li>
 </ul>
 
 <b><span style="color:red">If using Chrome you might get the following alert<br>
 "For your security, your phone is not allowed to install unknown apps from this source"<br>
-Then you must go to settings and change to allow installation	
+
+Then you must go to settings and change to allow installation
+Use back icon to get back to installation before pop-up displayed	
 </span></b>
 <ul>
-    <li><h3>Step 8 - Tap on Install</h3></li>
+    <li><h3>Step 7 - Tap on Install</h3></li>
 </ul>
 
 <b><span style="color:red">
@@ -49,7 +50,7 @@ See: <a href="https://jamesb6313.github.io/DownloadScoringApp/Instructions3.html
 else App installed message should be displayed.
 </span></b>
 <ul>
-    <li><h3>Step 9 - Tap on Open</h3></li>
+    <li><h3>Step 8 - Tap on Open, which will open app</h3></li>
 </ul>   
 </body>
 </html>
