Expand video selection for app usage

--- a/index.html
+++ b/index.html
@@ -35,6 +35,29 @@
 
 <a href="https://github.com/jamesb6313"> My Github Page</a><br>
 
+<h3><b>App Usage Videos</b></h3>
+
+<ul>
+
+<li>General usage
+<video width="640" height="480" controls="controls">
+	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
+</video> </li>
+<li>Redo - button
+<video width="640" height="480" controls="controls">
+	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
+</video> </li>
+<li>Detail - buton
+<video width="640" height="480" controls="controls">
+	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
+</video> </li>
+<li>Save Target - Button
+<video width="640" height="480" controls="controls">
+	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
+</video> </li>
+</ul>
+
+
 <!--<a href="https:/jamesb6313.github.io/DownloadScoringApp"> This site </a>-->
 
 </body>
