Starting to add information on general usage of app.

--- a/index.html
+++ b/index.html
@@ -28,37 +28,31 @@
 </video>
 
 <span style="color:red">
-	<h3><b>Links</b></h3>
+	<h3><b>Using Titan Archers Scoring App Videos and Links</b></h3>
 </span>
 
-<a href="https://jamesb6313.github.io/DownloadScoringApp/Instructions1.html">Instruction Text</a><br>
+<ul style="color:blue">
+	<li><a href="https://jamesb6313.github.io/DownloadScoringApp/Instructions1.html">Instruction Text</a>
+	</li>
 
-<a href="https://github.com/jamesb6313"> My Github Page</a><br>
+	<li><a href="https://github.com/jamesb6313">My Github Page</a>
+	</li>
 
-<h3><b>App Usage Videos</b></h3>
+	<li><a href="https://jamesb6313.github.io/DownloadScoringApp/GenUsage.html">General Usage Video</a>
+	</li>
 
-<ul>
+	<li>
+	<a href="https://jamesb6313.github.io/DownloadScoringApp/RedoPage.html">Redo Button Video</a>
+	</li>
 
-<li>General usage
-<video width="640" height="480" controls="controls">
-	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
-</video> </li>
-<li>Redo - button
-<video width="640" height="480" controls="controls">
-	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
-</video> </li>
-<li>Detail - buton
-<video width="640" height="480" controls="controls">
-	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
-</video> </li>
-<li>Save Target - Button
-<video width="640" height="480" controls="controls">
-	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
-</video> </li>
+	<li>
+	<a href="https://jamesb6313.github.io/DownloadScoringApp/DetailPage.html">Detail Button Video</a>
+	</li>
+
+	<li>
+	<a href="https://jamesb6313.github.io/DownloadScoringApp/SaveTargetPage.html">Save Target Button Video</a>
+	</li>
 </ul>
-
-
-<!--<a href="https:/jamesb6313.github.io/DownloadScoringApp"> This site </a>-->
 
 </body>
 </html>
