Starting to add information on general usage of app.

--- a/GenUsageVideo.html
+++ b/GenUsageVideo.html
@@ -13,13 +13,18 @@
 
 <h3><b>Titan Archers Scoring App general usage video</b></h3>
 
+<span style="color:red">
+	
+	<h3><b>General Usage Video</b></h3>
+	<video width="640" height="360" controls="controls">
+		<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
+	</video>
+
+
+</span>
 <ul>
 
-<li>General usage
-<video width="640" height="480" controls="controls">
-	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
-</video> </li>
-<li> <a href="https://jamesb6313.github.io/DownloadScoringApp/GenUsageInfo.html">Usage Text</a>
+<li> <a href="https://jamesb6313.github.io/DownloadScoringApp/GenUsageInfo.html">General Usage Text</a>
 </li>
 </ul>
 
