--- a/RedoPage.html
+++ b/RedoPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Using Titan Archers Scoring APP</title>
+    <title>Redo button - Titan Archers Scoring APP</title>
     <style> 
 		body {padding: 10; margin: 10;} 
 	</style>
@@ -11,16 +11,12 @@
 </head>
 <body>
 
-<h3><b>Titan Archers Scoring App general usage video</b></h3>
+<h3><b>Titan Archers Scoring App general usage video - Redo button</b></h3>
 
-<ul>
 
-<li>Redo button
-<video width="640" height="480" controls="controls">
+<video width="640" height="360" controls="controls">
 	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
-</video> </li>
-
-</ul>
+</video>
 
 </body>
 </html>
