Starting to add information on general usage of app.

--- a/DetailPage.html
+++ b/DetailPage.html
@@ -13,9 +13,14 @@
 
 <h3><b>Titan Archers Scoring App general usage video - Detail button</b></h3>
 
-<video width="640" height="360" controls="controls">
-	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
-</video>
+<span style="color:red">
+	
+	<h3><b>Detail Button Video</b></h3>
+	<video width="640" height="360" controls="controls">
+		<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
+	</video>
+
+</span>
 
 </body>
 </html>
