--- a/SaveTargetPage.html
+++ b/SaveTargetPage.html
@@ -13,9 +13,15 @@
 
 <h3><b>Titan Archers Scoring App general usage video - SaveTarget button</b></h3>
 
-<video width="640" height="360" controls="controls">
-	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
-</video>
+<span style="color:red">
+	
+	<h3><b>Save Target Button Video</b></h3>
+	<video width="640" height="360" controls="controls">
+		<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
+	</video>
+
+</span>
+
 
 </body>
 </html>
