--- a/RedoPage.html
+++ b/RedoPage.html
@@ -13,10 +13,14 @@
 
 <h3><b>Titan Archers Scoring App general usage video - Redo button</b></h3>
 
+<span style="color:red">
+	
+	<h3><b>Redo Button Video</b></h3>
+	<video width="640" height="360" controls="controls">
+		<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
+	</video>
 
-<video width="640" height="360" controls="controls">
-	<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcInstrutions.mp4" type="video/mp4" />
-</video>
+</span>
 
 </body>
 </html>
