upload new instruction video file

--- a/Instructions1.html
+++ b/Instructions1.html
@@ -30,9 +30,9 @@
 
 <b><span style="color:red">If using Chrome you might get the following alert<br>
 "For your security, your phone is not allowed to install unknown apps from this source"<br>
-
-Then you must go to settings and change to allow installation
-Use back icon to get back to installation before pop-up displayed	
+<br>
+<h3>Then you must go to settings and change to allow installation.<br>
+Use back icon to get back to installation before pop-up displayed.</h3>
 </span></b>
 <ul>
     <li><h3>Step 7 - Tap on Install</h3></li>
