Added button usage info

--- a/DetailPage.html
+++ b/DetailPage.html
@@ -21,7 +21,17 @@
 	</video>
 
 </span>
+<br>
+<br>
+<ul>
+    <li><h3>The <u>Detail Button</U> allows the users name and the target distance to be recorder on the score card.</h3></li>
+    <li><h3>The distance can be in feet, yards or meters. To change the units use the dropdown box.</h3></li>
+	<li><h3>The information is not required, but if not entered the app will request it upon each start up.</h3></li>
+</ul>
 
+<span style="color:red">	
+	<h3><b>This information is the only information that is saved on the phone and is strictly used only to be recorded on the score card.</b></h3>
+</span>
 </body>
 </html>
 <!-- file:///C:/Users/Home-laptop/Documents/GitPages/TitanArchersScoring/DownloadScoringApp/DetailPage.html -->
