--- a/GenUsageInfo.html
+++ b/GenUsageInfo.html
@@ -19,38 +19,46 @@
 
 <h3>
 <ol>
-    <li><p>
-	Upon initial launch a pop up will ask for user name and target distance (i.e. Details).<br>
-	This information is used to record your score and is optional.<br>
-	If it is not entered then it will appear again the next time the app is launched.<br>
-	Else, if it is entered it wil be stored locally on your phone. It will be displayed on the saved score card and used the next time the app is launched.<br>
-	This information can be changed later by using the "Detail" button.
-	</p></li>
-    <li><p>
-	Place and hold finger on target image and a virtual arrow point will appear, just above and to left of this point.<br>
-	Also, the current score of this point is displayed in the bottom left of the target image.<br>
-	While holding, move finger to position the virtual arrow point to register its score.<br>
-	When satisfied with the placement and score remove finger.<br>
-	The score will now register in the appropriate arrow box on the score card.<br>
-	If positioning or score is incorrect it can be correct by using th "Redo" button (see below).
-	</p></li>
-	<li><p>
-	Continue to do this for all arrows shot. The arrows will be grouped into threes and have an associated color for the group.<br>
-	As each score is registered on the score card a running total will be displayed, for each group of six arrows, in the last box at end of each line on the score card.<br>
-	The Running total for all shots will be displayed at the bottom left of the score card and also in the apps heading.<br>
-	</p></li>
-	<li><p>
-	Redo button:<br>
-	
-	</p></li>
-	<li><p>
-	Detail button:<br>
-	
-	</p></li>
-	<li><p>
-	Save Target button:<br>
-	
-	</p></li>
+    <li><ul>
+		<li>Upon initial launch a pop up will ask for user name and target distance (i.e. Details).</li>
+		<li>This information is used to record your score and is optional.</li>
+		<li>If it is not entered then it will appear again the next time the app is launched.</li>
+		<li>Else, if it is entered it wil be stored locally on your phone. It will be displayed on the saved score card and used the next time the app is launched.</li>
+		<li>This information can be changed later by using the "Detail" button.</li>
+	</ul></li>
+    <li><ul>
+		<li>Place and hold finger on target image and a virtual arrow point will appear, just above and to left of this point.</li>
+		<li>Also, the current score of this point is displayed in the bottom left of the target image.</li>
+		<li>While holding, move finger to position the virtual arrow point to register its score.</li>
+		<li>When satisfied with the placement and score remove finger.</li>
+		<li>The score will now register in the appropriate arrow box on the score card.</li>
+		<li>If positioning or score is incorrect it can be correct by using th "Redo" button (see below).</li>
+	</ul></li>
+	<li><ul>
+		<li>Continue to do this for all arrows shot. The arrows will be grouped into threes and have an associated color for the group.</li>
+		<li>As each score is registered on the score card a running total will be displayed, for each group of six arrows, in the last box at end of each line on the score card.</li>
+		<li>The Running total for all shots will be displayed at the bottom left of the score card and also in the apps heading.</li>
+	</ul></li>
+	<li>
+		<a href="https://jamesb6313.github.io/DownloadScoringApp/Instructions2.html">Using the Redo Button video</a>
+		<ul>
+			<li>The <u>Redo Button</u> allows the deletion of the last arrow point.</li>
+			<li>The arrow point will only be removed from the target display once the next arrow point is started.</li>
+			<li>On repeated pressing of the <u>Redo Button</u> multiple points will be deleted until no points exist (i.e. start all over).</li>
+		</ul></li>
+	<li>
+		<a href="https://jamesb6313.github.io/DownloadScoringApp/Instructions2.html">Using the Detail Button video</a>
+		<ul>
+			<li>The <u>Detail Button</U> allows the users name and the target distance to be recorder on the score card.</li>
+			<li>The distance can be in feet, yards or meters. To change the units use the dropdown box.</li>
+			<li>The information is not required, but if not entered the app will request it upon each start up.</li>
+		</ul></li>
+	<li>
+		<a href="https://jamesb6313.github.io/DownloadScoringApp/Instructions2.html">Using the Save Target Button video</a>
+		<ul>
+			<li>The <u>Save Target Button</U> allows the target and score card to be saved as an image.</li>
+			<li>The image can be shared to other apps.</li>
+		</ul></li>
 </ol></h3>
  
 </body>
