--- a/RedoPage.html
+++ b/RedoPage.html
@@ -19,9 +19,14 @@
 	<video width="640" height="360" controls="controls">
 		<source src="https://jamesb6313.github.io/DownloadScoringApp/vlcinstructions.mp4" type="video/mp4" />
 	</video>
-
 </span>
-
+<br>
+<br>
+<ul>
+    <li><h3>The <u>Redo Button</u> allows the deletion of the last arrow point.</h3></li>
+    <li><h3>The arrow point will only be removed from the target display once the next arrow point is started.</h3></li>
+	<li><h3>On repeated pressing of the <u>Redo Button</u> multiple points will be deleted until no points exist (i.e. start all over).</h3></li>
+</ul>
 </body>
 </html>
 <!-- file:///C:/Users/Home-laptop/Documents/GitPages/TitanArchersScoring/DownloadScoringApp/RedoPage.html -->
