--- a/SaveTargetPage.html
+++ b/SaveTargetPage.html
@@ -22,6 +22,13 @@
 
 </span>
 
+<br>
+<br>
+<ul>
+    <li><h3>The <u>Save Target Button</U> allows the target and score card to be saved as an image.</h3></li>
+    <li><h3>The image can be shared to other apps.</h3></li>
+</ul>
+
 
 </body>
 </html>
