--- a/GenUsageInfo.html
+++ b/GenUsageInfo.html
@@ -41,21 +41,21 @@
 	<li>
 		<a href="https://jamesb6313.github.io/DownloadScoringApp/RedoPage.html">Using the Redo Button video</a>
 		<ul>
-			<li>The <u>Redo Button</u> allows the deletion of the last arrow point.</li>
+			<li>The "Redo Button" allows the deletion of the last arrow point.</li>
 			<li>The arrow point will only be removed from the target display once the next arrow point is started.</li>
-			<li>On repeated pressing of the <u>Redo Button</u> multiple points will be deleted until no points exist (i.e. start all over).</li>
+			<li>On repeated pressing of the "Redo Button" multiple points will be deleted until no points exist (i.e. start all over).</li>
 		</ul></li>
 	<li>
 		<a href="https://jamesb6313.github.io/DownloadScoringApp/DetailPage.html">Using the Detail Button video</a>
 		<ul>
-			<li>The <u>Detail Button</U> allows the users name and the target distance to be recorder on the score card.</li>
+			<li>The "Detail Button" allows the users name and the target distance to be recorder on the score card.</li>
 			<li>The distance can be in feet, yards or meters. To change the units use the dropdown box.</li>
 			<li>The information is not required, but if not entered the app will request it upon each start up.</li>
 		</ul></li>
 	<li>
 		<a href="https://jamesb6313.github.io/DownloadScoringApp/SaveTargetPage.html">Using the Save Target Button video</a>
 		<ul>
-			<li>The <u>Save Target Button</U> allows the target and score card to be saved as an image.</li>
+			<li>The "Save Target Button" allows the target and score card to be saved as an image.</li>
 			<li>The image can be shared to other apps.</li>
 		</ul></li>
 </ol></h3>
