--- a/Instructions3.html
+++ b/Instructions3.html
@@ -24,7 +24,7 @@
     <li><h3>c - Select Advanced</h3></li>
     <li><h3>d - Select Special app access</h3></li>
     <li><h3>e - Select Install unknown apps</h3></li>
-    <li><h3>f - f - Verify browser "Will allow from this source" is set to on</h3></li>
+    <li><h3>f - Verify browser "Will allow from this source" is set to on</h3></li>
 </ul>
 
 <h3><b><span style="color:red">You might also get two messages from Play Protect upon installation
