Corrected general usage text

--- a/GenUsageInfo.html
+++ b/GenUsageInfo.html
@@ -36,7 +36,7 @@
 	<li><ul>
 		<li>Continue to do this for all arrows shot. The arrows will be grouped into threes and have an associated color for the group.</li>
 		<li>As each score is registered on the score card a running total will be displayed, for each group of six arrows, in the last box at end of each line on the score card.</li>
-		<li>The Running total for all shots will be displayed at the bottom left of the score card and also in the apps heading.</li>
+		<li>The Running total for all shots will be displayed in the apps heading.</li>
 	</ul></li>
 	<li>
 		<a href="https://jamesb6313.github.io/DownloadScoringApp/RedoPage.html">Using the Redo Button video</a>
